mixed up codepen and github links

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 or talking about Spider-Man.</p>
         </div>
         <div class="icon">
-            <a href="https://github.com/martinmckenna"><i class="fa fa-codepen fa-5x"></i></a>
+            <a href="https://github.com/martinmckenna"><i class="fa fa-github fa-5x"></i></a>
         </div>
         <div class="icon">
-            <a href="http://codepen.io/mmckenna/"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a>
+            <a href="http://codepen.io/mmckenna/"><i class="fa fa-codepen fa-5x" aria-hidden="true"></i></a>
         </div>
         <div class="icon">
             <a href="https://www.linkedin.com/in/mmckenna14"><i class="fa fa-linkedin fa-5x" aria-hidden="true"></i></a>
