--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="styles/reset.css" rel="stylesheet">
     <link href="styles/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Slabo+27px" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora|Raleway" rel="stylesheet">
 </head>
 
 <body>
