included a script to dynamcally change my age

--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <link href="styles/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lora|Raleway" rel="stylesheet">
+    
+    
 </head>
 
 <body>
     <div class="container">
         <div class="header" id="title">
-            <h1>I'm Marty</h1>
+            <h1>This is my Github Thing</h1>
         </div>
         <div class="header" id="about">
-            <p>Martin McKenna is a 22-year old front-end web developer from Philadelphia. He graduated from the University of
+            <p id="about-text">Martin McKenna is a -year old front-end web developer from Philadelphia. He graduated from the University of
                 Scranton in May 2016 with a degree in Media and Information Technology. A majority of his time is spent working
                 in the professional web development industry, while the rest of it is spent listening to Pierce the Veil
                 or talking about Spider-Man.</p>
@@ -33,5 +35,5 @@
         </div>
     </div>
 </body>
-
+<script src="scripts/app.js"></script>
 </html>
