--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Martin McKenna</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Martin McKenna is a front-end developer from Philadelphia who specializes in creating user interfaces that are data-driven and reactive.">
     <link href="styles/reset.css" rel="stylesheet">
     <link href="styles/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
@@ -16,22 +17,14 @@
 <body>
     <div class="container">
         <div class="header" id="title">
-            <h1>This is my Github Thing</h1>
+            <h1>My name is Martin McKenna</h1>
         </div>
         <div class="header" id="about">
-            <p id="about-text">Martin McKenna is a -year old front-end web developer from Philadelphia. He graduated from the University of
-                Scranton in May 2016 with a degree in Media and Information Technology. A majority of his time is spent working
-                in the professional web development industry, while the rest of it is spent listening to Pierce the Veil
-                or talking about Spider-Man.</p>
-        </div>
-        <div class="icon">
-            <a href="https://github.com/martinmckenna"><i class="fa fa-github fa-5x"></i></a>
-        </div>
-        <div class="icon">
-            <a href="http://codepen.io/mmckenna/"><i class="fa fa-codepen fa-5x" aria-hidden="true"></i></a>
-        </div>
-        <div class="icon">
-            <a href="https://www.linkedin.com/in/mmckenna14"><i class="fa fa-linkedin fa-5x" aria-hidden="true"></i></a>
+            <p id="about-text">
+                I am a front-end Engineer from Philadelphia.
+                For everything about me, please check out my
+                <a href="https://atmarty.com">personal site</a>
+            </p>
         </div>
     </div>
 </body>
